@startuml

title __FRAGMENT's Class Diagram__\n

  namespace com.yyzy.constellation {
    namespace weather.fragment {
      class com.yyzy.constellation.weather.fragment.BaseFragment {
          + loadData()
          + onCancelled()
          + onError()
          + onErrorResponse()
          + onFinished()
          + onResponse()
          + onSuccess()
          + showToast()
          + volleyLoadData()
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace weather.fragment {
      class com.yyzy.constellation.weather.fragment.CityWeatherFragment {
          - airIndexTv : TextView
          - bgNum : int
          - bg_pref : SharedPreferences
          - carIndexTv : TextView
          - city : String
          - cityTv : TextView
          - clothIndexTv : TextView
          - coldIndexTv : TextView
          - conditionTv : TextView
          - dateTv : TextView
          - error_code : int
          - futureLayout : LinearLayout
          - raysIndexTv : TextView
          - scrollView : ScrollView
          - sportIndexTv : TextView
          - tempRangeTv : TextView
          - tempTv : TextView
          - windTv : TextView
          + changeBg()
          + onClick()
          + onCreateView()
          + onError()
          + onResponse()
          + onSuccess()
          - getActivityData()
          - initView()
          - parseShowData()
      }
    }
  }
  

  com.yyzy.constellation.weather.fragment.BaseFragment .up.|> com.android.volley.Response.ErrorListener
  com.yyzy.constellation.weather.fragment.BaseFragment .up.|> com.android.volley.Response.Listener
  com.yyzy.constellation.weather.fragment.BaseFragment .up.|> org.xutils.common.Callback.CommonCallback
  com.yyzy.constellation.weather.fragment.BaseFragment -up-|> androidx.fragment.app.Fragment
  com.yyzy.constellation.weather.fragment.CityWeatherFragment .up.|> android.view.View.OnClickListener
  com.yyzy.constellation.weather.fragment.CityWeatherFragment -up-|> com.yyzy.constellation.weather.fragment.BaseFragment
  com.yyzy.constellation.weather.fragment.CityWeatherFragment o-- com.yyzy.constellation.utils.DiyProgressDialog : dialog
  com.yyzy.constellation.weather.fragment.CityWeatherFragment o-- com.yyzy.constellation.weather.entity.WeatherIndexEntity.ResultDTO.LifeDTO : life


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
